# Pulsar

./: .gitignore  .prettierignore  Agents.md  LICENSE  README.md  TempDB1.txt  TempInputPart1.txt  TempPD1.txt  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
docs/: SECURITY.md
src/: app.css  app.html
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: biometric.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 10_add_field_order_to_password_items.sql  11_add_category_to_password_items.sql  12_create_attachments_table.sql  13_create_search_indices_table.sql  14_create_item_tags_table.sql  15_move_attachments_to_disk.sql  16_create_search_trigrams_table.sql  17_create_activity_log_table.sql  18_add_index_to_updated_at.sql  19_add_search_indices_and_tables.sql  1_create_buttons_table.sql  2_create_password_items_table.sql  3_add_fields_to_password_items.sql  4_add_timestamps_to_password_items.sql  5_add_color_to_password_items.sql  6_create_recipient_keys_table.sql  7_add_totp_secret_to_password_items.sql  8_create_configuration_table.sql  9_add_custom_fields_to_password_items.sql
src-tauri/src/: auth.rs  backup_commands.rs  clipboard.rs  crypto.rs  db.rs  db_commands.rs  encryption.rs  error.rs  file_dialog.rs  main.rs  security.rs  state.rs  totp.rs  tray.rs  types.rs  utils.rs  vault_commands.rs
src-tauri/src/auth/: biometrics.rs  commands.rs  crypto_utils.rs  metadata.rs  mod.rs  types.rs
src-tauri/src/db/: activity.rs  attachments.rs  buttons.rs  config.rs  core.rs  mod.rs  passwords.rs  recipient_keys.rs  utils.rs  validation.rs
src-tauri/src/settings/: mod.rs  system.rs
src-tauri/src/types/: backup.rs  crypto.rs  mod.rs  secret.rs  vault.rs
src/lib/: i18n.svelte.ts  i18n.ts  icons.ts  stores.ts
src/lib/components/: CreatePasswordPopup.svelte  DeletePasswordPopup.svelte  DeleteTagPopup.svelte  ImportManagerPopup.svelte  KeyboardShortcutsPopup.svelte  SecurityManager.svelte  UnsavedChangesPopup.svelte
src/lib/config/: keybinds.ts  settings.ts
src/lib/i18n/: ar.json  de.json  el.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  ru.json  sv.json  th.json  tr.json  vi.json  zh.json
src/lib/stores/: advanced.ts  appSettings.svelte.ts  appSettings.ts  appState.svelte.ts  appearance.ts  autofill.ts  backup.ts  clipboard.ts  general.svelte.ts  general.ts  generator.ts  keybinds.ts  passwordPresets.ts  tags.ts  (+16 more)
src/routes/: +layout.svelte  +layout.ts
(+98 files in other folders)
