[package]
name = "pulsar"
version = "0.1.0"
description = "A Tauri App"
authors = ["xeintdm", "pysen"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.3", features = [] }
tauri-plugin-opener = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
thiserror = "2.0"

x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
libsqlite3-sys = { version = "^0.28.0", features = ["bundled-sqlcipher"] }
totp-rs = { version = "^5.0", features = ["qr"] }
tauri-plugin-store = { version = "2.3" }
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.10.1"
tauri-plugin-dialog = "2.4"
tauri-plugin-clipboard-manager = "2.0"
base64 = "0.22.1"
zeroize = "1.8.1"
chrono = "0.4.41"
argon2 = "0.5.3"
base32 = "0.5.1"
hkdf = "0.12.4"
sha2 = "0.10.9"
rand = "0.8.5"
dirs = "6.0.0"
hex = "0.4"
tauri-plugin-biometric = "2.3.2"
keyring = "3.6.3"
mime_guess = "2.0.5"
subtle = "2.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Foundation", "Security_Credentials_UI", "Win32_Foundation", "Win32_System_Registry", "Win32_Security"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
block = "0.1"
dispatch = "0.2"
